# xsi

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  pyproject.toml
docker/: README.md
docker/arango/: docker-compose.yml
run/: compare_citation_impact.py  compare_citation_impact_per_inst.py  compute_optport.py  entity_analysis.py  generate_db_dataset_stats.py  probe_covid_impact.py  review_model.features.py  review_model.py  review_scaler.py
schema/: kg.yaml
xsi/: db_util.py  onto.py  plot.py
xsi/model/: data.py  onto.py  opt.py  scaler.py  target.py  toolbox.py
xsi/pipelines/: common.py
